--- a/public/login.html
+++ b/public/login.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- BOOTSTRAP -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> 
 
-<!-- CUSTOM CSS -->
-<link rel="stylesheet" href="assets/css/style.css">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -45,7 +45,7 @@
     
 	<!-- LOGIN FORM
     ================================================== -->
-    
+<section id="login">   
     <div class="card m-auto" style="width: 25rem;" id="login-form">
         <div class="card-header">
             LOGIN TO YOUR ACCOUNT
@@ -64,7 +64,7 @@
                 </form>
         </div>
     </div>
-
+</section> 
 
 
 
