profile section bootstrapped

--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Login Form</title>
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> 
 
@@ -45,26 +45,26 @@
     
 	<!-- LOGIN FORM
     ================================================== -->
-<section id="login">   
-    <div class="card m-auto" style="width: 25rem;" id="login-form">
-        <div class="card-header">
-            LOGIN TO YOUR ACCOUNT
+    <section id="login">   
+        <div class="card m-auto" style="width: 25rem;" id="login-form">
+            <div class="card-header">
+                LOGIN TO YOUR ACCOUNT
+            </div>
+            <div class="card-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="login-email">Email address</label>
+                            <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="login-password">Password</label>
+                            <input type="password" class="form-control" id="login-password" placeholder="Password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+            </div>
         </div>
-        <div class="card-body">
-                <form>
-                    <div class="form-group">
-                        <label for="login-email">Email address</label>
-                        <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
-                    </div>
-                    <div class="form-group">
-                        <label for="login-password">Password</label>
-                        <input type="password" class="form-control" id="login-password" placeholder="Password">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-        </div>
-    </div>
-</section> 
+    </section> 
 
 
 
