--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -8,15 +8,13 @@
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> 
 
+    <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-        
-
 
 	<!-- HEADER
 	================================================== -->
@@ -74,7 +72,6 @@
             </div>
         </div>
     </div>
-
 
 
 
