--- a/public/trivia.html
+++ b/public/trivia.html
@@ -54,7 +54,7 @@
                     <h1>Let's Play</h1>
                     <select class="custom-select">
                         <option selected>Pick a Category</option>
-                        <option value="1">Category 1</option>
+                        <option value="history">Category 1</option>
                         <option value="2">Category 2</option>
                         <option value="3">Category 3</option>
                         <option value="4">Category 4</option>
@@ -101,11 +101,14 @@
             </div>
         </div>
     </div>
+    <div class="triviaQuestion"></div>
+    <div class="triviaAnswer"></div>
 
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>  
+    <script type="text/javascript" src="/assets/js/triviaClub.js"></script>
 </body>
 </html>
