--- a/public/trivia.html
+++ b/public/trivia.html
@@ -50,15 +50,15 @@
 
             <!-- TRIVIA WELL
             ================================================== -->
-            <div class="col-md-8 " id="trivia-well">
+            <div class="col-md-8 " id="trivia-well" >
                     <h1>Let's Play</h1>
-                    <select class="custom-select">
+                    <select class="custom-select" id="table">
                         <option selected>Pick a Category</option>
-                        <option value="history">Category 1</option>
-                        <option value="2">Category 2</option>
-                        <option value="3">Category 3</option>
-                        <option value="4">Category 4</option>
-                        <option value="5">Category 5</option>
+                        <option value="history">History</option>
+                        <option value="Science & Nature">Science &amp; Nature</option>
+                        <option value="Entertainment: Video Games">Entertainment: Video Games</option>
+                        <option value="Entertainment: Music">Entertainment: Music</option>
+                        <option value="Entertainment: Film">Entertainment: Film</option>
                     </select>
             
                 <div class="card mt-5">
@@ -103,6 +103,7 @@
     </div>
     <div class="triviaQuestion"></div>
     <div class="triviaAnswer"></div>
+    <button type="button" class="btn btn-primary" id="submitBtn">Submit</button>
 
 
 
